--- a/BTKitTester/Classes/Presentation/RuuviTag/Connectable/Connectable.storyboard
+++ b/BTKitTester/Classes/Presentation/RuuviTag/Connectable/Connectable.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Uhr-O6-bc1">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Uhr-O6-bc1">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -45,7 +43,7 @@
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="dAn-Z1-FMY" firstAttribute="leading" secondItem="3O0-iA-TKV" secondAttribute="trailing" constant="16" id="Rcz-Nw-MrO"/>
                                         <constraint firstAttribute="bottom" secondItem="3O0-iA-TKV" secondAttribute="bottom" id="VIf-Rl-Gp5"/>
@@ -88,7 +86,7 @@
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="mHx-No-243" secondAttribute="bottom" id="CdD-aV-Z87"/>
                                         <constraint firstItem="nTh-ER-Lug" firstAttribute="top" secondItem="EeI-Ea-Rub" secondAttribute="top" id="OPX-VW-TBW"/>
@@ -106,7 +104,7 @@
                                     </constraints>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="4U0-C6-frM" firstAttribute="top" secondItem="Qrd-XJ-jzS" secondAttribute="bottom" constant="8" id="Bew-vz-ltJ"/>
                                 <constraint firstItem="Qrd-XJ-jzS" firstAttribute="centerX" secondItem="LL7-K6-3TG" secondAttribute="centerX" id="NfH-V8-oJT"/>
@@ -118,7 +116,7 @@
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ConnectableValueTableViewCellCellReuseIdentifier" id="Oe1-VW-YcR" customClass="ConnectableValueTableViewCell" customModule="BTKitTester" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="141" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="141" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Oe1-VW-YcR" id="JBt-Av-86z">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -150,7 +148,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ConnectableValuesTableViewCellReuseIdentifier" id="n2W-xv-pL7" customClass="ConnectableValuesTableViewCell" customModule="BTKitTester" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="185" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="184.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="n2W-xv-pL7" id="HNL-B6-IsZ">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
